test/official_tests/inheritance/inherit_from_number.lox
var Number = 123;
class Foo < Number {} // error: {"line":2,"message":"Superclass must be a class","type":"RuntimeError"}
